Reworked the whole demo-app to support tenants logic
