# app/model/model.go
@@ -15,15 +15,18 @@
 
 package appmodel
 
+import "github.com/google/uuid"
+
 type Configuration struct {
 	Id              int64
+	TenantId        uuid.UUID
+	SiteID          string
 	ApiKey          string
 	RefreshInterval int32
 	RequestTimeout  int32
 	AssetFilter     [][]FilterRule
 	Enable          bool
 	Active          bool
-	ProjectIDs      []string
 	UserId          string
 }
 
